# Artisan2D

./: .gitignore  Artisan2D.lnk  CMakeLists.txt  LICENSE  README.md  resources.aps  resources.rc
include/: Colors.h
include/Blocks/: Block.h  KeyInputBlock.h  ShapeBlock.h
include/Core/: Engine.h  Logger.h
include/Graphics/: Renderer.h
include/UI/: Layout.h
src/: main.cpp
src/Blocks/: KeyInputBlock.cpp  ShapeBlock.cpp
src/Core/: Engine.cpp  Logger.cpp
src/Graphics/: Renderer.cpp
src/UI/: Layout.cpp
